Cria rotas para product.py e prepara SQLAlchemy
