# src/model/product.py
@@ -1,7 +1,8 @@
 class Product:
 
-    def __init__(self, product_id: int, name: str, price: float, description: str, active: bool,
-                 fk_registered_by_employee_id: int, fk_batch_id: list[int] = None, fk_supplier_id: list[int] = None):
+    def __init__(self, product_id: int, name: str, price: float,
+                 description: str, active: bool, fk_registered_by_employee_id: int,
+                 fk_batch_id: list[int] = None, fk_supplier_id: list[int] = None):
         self.id: int = product_id
         self.name: str = name
         self.price: float = price
