# src/routes/product.py
@@ -1,0 +1,25 @@
+from flask import abort, make_response
+from src.model.product import Product
+
+
+def id_not_found(): pass
+
+
+def read_all():
+    pass
+
+
+def read_one():
+    pass
+
+
+def create():
+    pass
+
+
+def update():
+    pass
+
+
+def delete():
+    pass
